8209385: CDS runtime classpath checking is too strict when only classes from the system modules are archived

Skip checking the path entries which are not being referenced during CDS dump time

Reviewed-by: jiangli, iklam